apps/ocis/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocis
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ocis
          image: ocis
          command: ["bash", "-c", "ocis server"]
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 9200
              protocol: TCP
            - name: metrics
              containerPort: 9205
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: metrics
            timeoutSeconds: 5
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: ldap-certs
              mountPath: /ldap-certs
            - name: ocis-config
              mountPath: /etc/ocis
            - name: ocis-data
              mountPath: /var/lib/ocis
      restartPolicy: Always
      volumes:
        - name: ldap-certs
          secret:
            secretName: ocis-ldap-cert
            items:
              - key: ca.crt
                path: ca.crt
        - name: ocis-config
          configMap:
            name: ocis-config
        - name: ocis-data
          emptyDir: {}
