apps/ocis/base/hello.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocis-hello
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ocis-hello
          image: owncloud/ocis-hello:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 9105
              protocol: TCP
          #livenessProbe:
          #  httpGet:
          #    path: /healthz
          #    port: metrics
          #  timeoutSeconds: 5
          #  initialDelaySeconds: 10
          #  periodSeconds: 10
          #  failureThreshold: 3
          resources:
            limits:
              memory: 100Mi
            requests:
              cpu: 10m
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      restartPolicy: Always
