apps/ocis/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocis
spec:
  ports:
    - protocol: TCP
      port: 9200
      targetPort: web
      name: web
    - protocol: TCP
      port: 9200
      targetPort: metrics
      name: metrics

  type: ClusterIP
